# model-provider

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: cargo-publish.yml
docs/: README.md  api-reference.md  contributing.md  design-guidelines.md  http-api.md  http-endpoints.md  interfaces.md  rust-api.md
examples/: stream_chat.rs
src/: client.rs  common.rs  config.rs  error.rs  lib.rs  sse.rs  traits.rs  util.rs
src/aliyun/: embed.rs  mod.rs  rerank.rs
src/audio/: mod.rs
src/chat/: anthropic_compat.rs  google_gemini.rs  mod.rs  openai_compat.rs  types.rs
src/chat/anthropic_compat/: mod.rs  tests.rs
src/chat/google_gemini/: mod.rs  tests.rs
src/chat/openai_compat/: mod.rs  tests.rs
src/embed/: mod.rs  openai_compat.rs  zhipu.rs
src/image/: mod.rs
src/ollama/: embed.rs
src/openai/: embed.rs
src/rerank/: aliyun.rs  mod.rs  zhipu.rs
src/zhipu/: embed.rs  rerank.rs
