[package]
name = "model-provider"
version = "0.1.0"
edition = "2021"
authors = ["Zoranner"]
description = "Multi-provider AI API client (Embed, Rerank, LLM)"
license = "GPL-3.0-only"

[features]
default = ["openai"]
all = ["aliyun", "ollama", "openai", "zhipu"]
aliyun = []
ollama = []
openai = []
zhipu = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
regex = "1"
tracing = "0.1"
