[package]
name = "model-provider"
version = "0.2.0"
edition = "2021"
authors = ["Zoranner"]
description = "Multi-provider AI API client (OpenAI, Anthropic, Google Gemini, Aliyun, Ollama, Zhipu; chat, embed incl. Gemini, rerank, image, audio stubs)"
license = "MIT"

[features]
# 厂商
default = ["openai", "chat", "embed"]
openai = []
aliyun = []
anthropic = []
google = []
ollama = []
zhipu = []

# 模态
chat = []
embed = []
rerank = []
image = []
audio = []

# 组合
all-providers = ["aliyun", "anthropic", "google", "ollama", "openai", "zhipu"]
all-modalities = ["chat", "embed", "rerank", "image", "audio"]
full = ["all-providers", "all-modalities"]
# 兼容旧 feature 名：等同启用全部厂商 + 全部模态
all = ["full"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
regex = "1"
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
